# Offensive-Rust

./: README.md
clr-from-file/: .gitignore  Cargo.toml
clr-from-file/.net/Test/: Program.cs  Test.csproj  Test.sln
clr-from-file/.net/Test/Properties/: AssemblyInfo.cs
clr-from-file/src/: main.rs
clr-from-memory-using-clroxyde/: Cargo.toml
clr-from-memory-using-clroxyde/src/: main.rs
console-hijack/: Cargo.toml  log.txt
console-hijack/cppversion/Console-hijack/: Console-hijack.cpp  Console-hijack.sln  Console-hijack.vcxproj  Console-hijack.vcxproj.filters
console-hijack/src/: main.rs
incrust/: Cargo.toml  README.MD  build.rs
incrust/.cargo/: config.toml
incrust/src/: bin.rs  debug.rs  helpers.rs  lib.rs  loader.rs  main.rs  payload.b64  payload.b64.x64  winapi.rs
incrust/src/winapi/: constants.rs  functions.rs  helpers.rs  structs.rs  syscall.rs  syscall_wrapper.rs  types.rs
indirect-syscalls/: Cargo.toml
indirect-syscalls/src/: debug.rs  main.rs  syscall.rs  winapi.rs
indirect-syscalls/src/winapi/: functions.rs  helpers.rs  ssn_resolver.rs  structs.rs  syscall.rs  syscall_wrapper.rs  types.rs
local-pe-injection/: Cargo.toml  README.MD  output.txt
local-pe-injection/.cargo/: config.toml
local-pe-injection/src/: common.rs  loader.rs  main.rs  winapi.rs
local-pe-injection/src/common/: debug.rs  helpers.rs  output.rs
local-pe-injection/src/winapi/: constants.rs  dll_functions.rs  kernel32.rs  nt.rs  ntdll.rs  pe_loader.rs  structs.rs  types.rs
local-pe-injection/src/winapi/nt/: syscall_call.rs  syscall_functions.rs  syscall_wrapper.rs
local-proc-dll-enum/: Cargo.toml
local-proc-dll-enum/src/: main.rs
local-proc-dll-enum/src/winapi/: structs.rs  types.rs
local-proc-dll-functions-enum/: Cargo.toml
local-proc-dll-functions-enum/src/: main.rs  winapi.rs
local-proc-dll-functions-enum/src/winapi/: types.rs
nt-syscall-retrieve-ssn/: Cargo.toml
nt-syscall-retrieve-ssn/src/: main.rs
nt-syscall-retrieve-ssn/src/winapi/: helpers.rs
self-delete/: Cargo.toml
self-delete/src/: common.rs  main.rs  winapi.rs
self-delete/src/common/: debug.rs  error.rs
self-delete/src/winapi/: constants.rs  dll_functions.rs  functions.rs  helpers.rs  kernel32.rs  structs.rs  types.rs
