[package]
name = "incrust"
version = "0.1.0"
edition = "2021"

[lib]
name = "incrustdll"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "incrust"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
litcrypt = "0.3.0"
rand = "0.8.5"

[features]
default = ["payload_b64", "inject_self", "syscall_indirect"]
no_console = []
regsvr = []
xll = []
#syscall types
syscall_direct = []
syscall_indirect = []
#payload type
payload_b64 = []
#injection target
inject_self = []
inject_proc_id = []
inject_proc_name = []

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
